[gd_scene load_steps=15 format=3 uid="uid://chlgaovsd0hvn"]

[ext_resource type="Script" path="res://mushroom.gd" id="1_3vpvw"]
[ext_resource type="Texture2D" uid="uid://doxdjv7n2wx2n" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Mushroom - Small/SmallMushroom_Idle_1.png" id="1_6gowj"]
[ext_resource type="Texture2D" uid="uid://dtqu7ea8t8ylv" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Mushroom - Small/SmallMushroom_Idle_2.png" id="2_h74xq"]
[ext_resource type="Texture2D" uid="uid://cowdfbgnayutj" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Mushroom - Small/SmallMushroom_Idle_3.png" id="3_d72ns"]
[ext_resource type="Texture2D" uid="uid://c24mtiarqp3hq" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Mushroom - Small/SmallMushroom_Idle_4.png" id="4_hqkbj"]
[ext_resource type="Texture2D" uid="uid://ddtnrjnjylqdn" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Mushroom - Small/SmallMushroom_Walk_1.png" id="5_cx3qu"]
[ext_resource type="Texture2D" uid="uid://cbyp5mffknfc3" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Mushroom - Small/SmallMushroom_Walk_2.png" id="6_yduf4"]
[ext_resource type="Texture2D" uid="uid://cl28ydu34xdof" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Mushroom - Small/SmallMushroom_Walk_3.png" id="7_fg1nj"]
[ext_resource type="Texture2D" uid="uid://dfxnlrogab6op" path="res://Enchanted Forest - Individual Frames/Enchanted Forest - Individual Frames/Mushroom - Small/SmallMushroom_Walk_4.png" id="8_yrh4e"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yqdor"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6gowj")
}, {
"duration": 1.0,
"texture": ExtResource("2_h74xq")
}, {
"duration": 1.0,
"texture": ExtResource("3_d72ns")
}, {
"duration": 1.0,
"texture": ExtResource("4_hqkbj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_cx3qu")
}, {
"duration": 1.0,
"texture": ExtResource("6_yduf4")
}, {
"duration": 1.0,
"texture": ExtResource("7_fg1nj")
}, {
"duration": 1.0,
"texture": ExtResource("8_yrh4e")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwqyo"]
size = Vector2(57, 57)

[sub_resource type="Animation" id="Animation_jkiqd"]
resource_name = "idle"
length = 0.4

[sub_resource type="Animation" id="Animation_6gr8m"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ildo"]
_data = {
"idle": SubResource("Animation_jkiqd"),
"walk": SubResource("Animation_6gr8m")
}

[node name="Mushroom" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_3vpvw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -30)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_yqdor")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 5.5)
shape = SubResource("RectangleShape2D_uwqyo")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_8ildo")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
